<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="action_play">Play</string>
    <string name="action_play_all">Play all</string>
    <string name="action_shuffle_play">Shuffle play</string>
    <string name="action_queue_next">Queue next</string>
    <string name="shuffle_all_label">Shuffle all</string>
    <string name="advanced_shuffle_label">Advanced shuffle</string>
    <string name="shuffle_button_tip">Tap for normal shuffle. Long press for advanced options.</string>
    <string name="action_play_pause">Play/Pause</string>
    <string name="action_pause">Pause</string>
    <string name="action_next">Next</string>
    <string name="action_previous">Previous</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_cycle_repeat">Cycle repeat mode</string>
    <string name="action_toggle_shuffle">Toggle shuffle mode</string>
    <string name="reset_action">Reset</string>
    <string name="action_more">More</string>
    <string name="import_action">Import</string>
    <string name="create_action">Create</string>
    <string name="search_label">Search</string>
    <string name="search_hint">Search your library…</string>
    <string name="action_voice_search">Voice search</string>
    <string name="speech_not_supported">Your device doesn\'t support speech input</string>
    <string name="search_artist_x_label">Search artist: %s</string>
    <string name="search_album_x_label">Search album: %s</string>
    <string name="search_list_x_label">Search list: %s</string>
    <string name="search_from_x_label">Search from \"%s\"</string>
    <string name="search_year_x_label">Search year: %s</string>
    <string name="search_in_folder_x">Search in folder: %s</string>
    <string name="search_last_added">Search latest music</string>
    <string name="shuffle_mode_album">Album shuffle</string>
    <string name="shuffle_mode_artist">Artist shuffle</string>
    <string name="action_share">Share</string>
    <string name="action_save">Save</string>
    <string name="what_do_you_want_to_share">What do you want to share?</string>
    <string name="the_audio_file">The audio file</string>
    <string name="i_am_listening">I\'m listening…</string>
    <string name="currently_listening_to_x_by_x">I\'m listening to %1$s by %2$s</string>
    <string name="share_to_stories">Share to stories</string>
    <string name="could_not_create_the_story">Couldn\'t create the story.</string>
    <string name="back_action">Back</string>
    <string name="rename_action">Rename</string>
    <string name="add_action">Add</string>
    <string name="delete_action">Delete</string>
    <string name="remove_action">Remove</string>
    <string name="clear_action">Clear</string>
    <string name="close_action">Close</string>
    <string name="continue_action">Continue</string>
    <string name="select_all_title">Select all</string>
    <string name="x_selected">%d selected</string>
    <string name="preparing_playback_title">Preparing</string>
    <string name="restoring_playback_state">Restoring playback state and queue…</string>
    <string name="playback_stopped_title">Playback stopped</string>
    <string name="playing_notification_description">The playing notification provides actions for play/pause etc.</string>
    <string name="playing_notification_name">Playing notification</string>
    <string name="action_scan_directory">Scan directory</string>
    <string name="no_device_playlists">No playlists</string>
    <string name="select_songs_title">Select songs</string>
    <string name="playlist_x_is_empty">Playlist %s is empty.</string>
    <string name="playlist_name_cannot_be_empty">Playlist name can\'t be empty</string>
    <string name="imported_playlist_x">Imported playlist \"%1$s\".</string>
    <string name="could_not_import_the_playlist_x">Couldn\'t import the playlist \"%s\"</string>
    <string name="there_are_no_importable_playlists">There are no importable playlists.</string>
    <string name="playlist_x_not_imported">Playlist %s not imported.</string>
    <string name="action_import_playlist">Import playlist…</string>
    <string name="action_new_playlist">New playlist…</string>
    <string name="action_tag_editor">Tag editor</string>
    <string name="web_search">Web Search</string>
    <string name="action_delete_from_device">Delete from device</string>
    <string name="playing_queue_label">Playing queue</string>
    <string name="action_add_to_favorites">Add to Favorites</string>
    <string name="action_add_to_playlist">Add to playlist</string>
    <string name="action_add_to_playing_queue">Add to queue</string>
    <string name="add_to_label">Add to</string>
    <string name="go_to_label">Go to</string>
    <string name="action_go_to_artist">Go to Artist</string>
    <string name="playlist_label">Playlist</string>
    <string name="play_info">Play info.</string>
    <string name="horizontal_albums">Horizontal albums</string>
    <string name="ignore_singles">Ignore singles</string>
    <string name="compact_song_view">Compact song view</string>
    <string name="show_total_duration">Show total duration</string>
    <string name="action_view_type">View type</string>
    <string name="view_type_normal">Normal</string>
    <string name="view_type_card">Card</string>
    <string name="view_type_colored_card">Colored card</string>
    <string name="view_type_circle">Circle</string>
    <string name="view_type_image">Image</string>
    <string name="action_grid_size">Grid size</string>
    <string name="grid_size_1" translatable="false">1</string>
    <string name="grid_size_2" translatable="false">2</string>
    <string name="grid_size_3" translatable="false">3</string>
    <string name="grid_size_4" translatable="false">4</string>
    <string name="grid_size_5" translatable="false">5</string>
    <string name="grid_size_6" translatable="false">6</string>
    <string name="grid_size_7" translatable="false">7</string>
    <string name="grid_size_8" translatable="false">8</string>
    <string name="action_sort_order">Sort by</string>
    <string name="sort_order_az">A-Z</string>
    <string name="sort_order_artist">Artist</string>
    <string name="sort_order_album">Album</string>
    <string name="sort_order_duration">Duration</string>
    <string name="sort_order_date_added">Date added</string>
    <string name="sort_order_date_modified">Date modified</string>
    <string name="sort_order_descending">Descending</string>
    <string name="sort_order_ignore_articles">Ignore articles</string>
    <string name="action_set_as_ringtone">Set as ringtone</string>
    <string name="action_details">Details</string>
    <string name="scan_media">Scan media</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="genre">Genre</string>
    <string name="equalizer_label">Equalizer</string>
    <string name="sound_settings">Sound settings</string>
    <string name="action_show_lyrics">Show lyrics</string>
    <string name="action_sleep_timer">Sleep timer</string>
    <string name="settings_title">Settings</string>
    <string name="appearance_title">Appearance</string>
    <string name="appearance_summary">Change the app\'s theme and other visual settings.</string>
    <string name="now_playing_title">Now playing</string>
    <string name="now_playing_summary">Customize the now playing screen.</string>
    <string name="lyrics_preferences_title">Lyrics</string>
    <string name="lyrics_preferences_summary">Adjust font, spacing, and other options to personalize your lyrics view.</string>
    <string name="playback_title">Playback</string>
    <string name="playback_summary">Change the sound settings, Bluetooth headsets, etc.</string>
    <string name="metadata_title">Metadata</string>
    <string name="metadata_summary">Settings related to album and artists images.</string>
    <string name="library_title">Library</string>
    <string name="library_summary">Settings for playlists and exclusion/inclusion filters.</string>
    <string name="advanced_title">Advanced</string>
    <string name="advanced_summary">In-app language and other settings for advanced users.</string>
    <string name="update_title">Update</string>
    <string name="update_summary">Settings for app updates.</string>
    <string name="about_title">About</string>
    <string name="album_cover_header">Cover</string>
    <string name="controls_header">Controls</string>
    <string name="display_header">Display</string>
    <string name="now_playing_screen_title">Style</string>
    <string name="open_on_play_title">Open on play</string>
    <string name="open_on_play_summary">Expand the Now Playing panel automatically after start playing a song.</string>
    <string name="squiggly_seek_bar_title">Squiggly seek bar</string>
    <string name="squiggly_seek_bar_summary">Enable a wavy seek bar instead of the default slider.</string>
    <string name="extra_controls_title">Extra controls</string>
    <string name="extra_controls_summary">Add extra controls for mini player</string>
    <string name="adaptive_controls_title">Adaptive controls</string>
    <string name="adaptive_controls_summary">The controls on the mini player change to suit the current player style.</string>
    <string name="swipe_to_dismiss_title">Swipe to dismiss</string>
    <string name="swipe_to_dismiss_summary">Swipe down the mini player to stop playback and clear playing queues.</string>
    <string name="circle_button_title">Circular play button</string>
    <string name="swipe_album_cover_title">Swipe album cover</string>
    <string name="swipe_album_cover_summary">Swipe left and right on album cover to skip between songs.</string>
    <string name="single_tap_on_album_cover_title">Single tap on cover</string>
    <string name="double_tap_on_album_cover_title">Double tap on cover</string>
    <string name="long_press_on_album_cover_title">Long press on cover</string>
    <string name="now_playing_corner_radius_title">Image corner radius</string>
    <string name="now_playing_corner_radius_summary">Defines how rounded the corners of the album art should appear.</string>
    <string name="carousel_effect_title">Carousel effect</string>
    <string name="album_cover_effect_title">Album cover effect</string>
    <string name="lyrics_on_album_cover_title">Lyrics on cover</string>
    <string name="lyrics_on_album_cover_summary">Show song lyrics instead of cover when them are available.</string>
    <string name="animate_controls_title">Animate controls</string>
    <string name="animate_controls_summary">It\'s played when opening the player panel.</string>
    <string name="swipe_controls_title">Swipe controls</string>
    <string name="swipe_controls_summary">Swipe left on any blank space in the now playing screen to go to the next song and swipe right to go to the previous song.</string>
    <string name="display_album_name_title">Display album name</string>
    <string name="display_extra_info_title">Display extra info</string>
    <string name="display_extra_info_summary">Display extra info about the song, like bitrate, format, sampling rate, etc.</string>
    <string name="display_next_song_title">Display next song</string>
    <string name="display_next_song_summary">Display the next song in the queue at the bottom of the player.</string>
    <string name="select_extra_info_title">Extra info</string>
    <string name="select_extra_info_summary">Select the extra info to display in the player panel.</string>
    <string name="prefer_remaining_time_title">Prefer remaining time</string>
    <string name="prefer_remaining_time_summary">Display remaining time instead of the song\'s duration.</string>
    <string name="prefer_album_artist_name_title">"Prefer Album-artist's name"</string>
    <string name="prefer_album_artist_name_summary">Shows the Album-artist\'s name instead of Song-artist\'s name (if available).</string>
</resources>