<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<item
		android:id="@+id/action_playing_queue"
		android:title="@string/playing_queue_label"
		android:icon="@drawable/ic_queue_music_24dp"
		android:visible="false"
		app:showAsAction="always"/>
	<item
		android:id="@+id/action_favorite"
		android:title="@string/action_add_to_favorites"
		android:icon="@drawable/ic_favorite_outline_24dp"
		app:showAsAction="always"/>
	<item
		android:id="@+id/action_show_lyrics"
		android:title="@string/action_show_lyrics"
		android:icon="@drawable/ic_lyrics_outline_24dp"
		app:showAsAction="ifRoom"/>
	<item
		android:id="@+id/action_equalizer"
		android:title="@string/equalizer_label"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_sound_settings"
		android:title="@string/sound_settings"
		app:showAsAction="never"/>
	<item
		android:id="@+id/menu_go_to"
		android:title="@string/go_to_label"
		app:showAsAction="never">
		<menu>
			<item
				android:id="@+id/action_go_to_album"
				android:title="@string/album"/>
			<item
				android:id="@+id/action_go_to_artist"
				android:title="@string/artist"/>
			<item
				android:id="@+id/action_go_to_genre"
				android:title="@string/genre"/>
		</menu>
	</item>
	<item
		android:id="@+id/action_tag_editor"
		android:title="@string/action_tag_editor"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_web_search"
		android:title="@string/web_search"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_share_now_playing"
		android:title="@string/action_share"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_delete_from_device"
		android:title="@string/action_delete_from_device"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_details"
		android:title="@string/action_details"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_sleep_timer"
		android:title="@string/action_sleep_timer"
		app:showAsAction="never"/>
</menu>
