<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_play_next"
        android:title="@string/action_queue_next"/>
    <item
        android:id="@+id/action_add_to_playing_queue"
        android:title="@string/action_add_to_playing_queue" />
    <item
        android:id="@+id/action_add_to_playlist"
        android:title="@string/action_add_to_playlist" />
    <item
        android:id="@+id/menu_go_to"
        android:title="@string/go_to_label">
        <menu>
            <item
                android:id="@+id/action_go_to_album"
                android:title="@string/album"/>
            <item
                android:id="@+id/action_go_to_artist"
                android:title="@string/artist"/>
            <item
                android:id="@+id/action_go_to_genre"
                android:title="@string/genre"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_tag_editor"
        android:title="@string/action_tag_editor"/>
    <item
        android:id="@+id/action_set_as_ringtone"
        android:title="@string/action_set_as_ringtone"/>
    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"/>
    <item
        android:id="@+id/action_delete_from_device"
        android:title="@string/action_delete_from_device"/>
    <item
        android:id="@+id/action_details"
        android:title="@string/action_details"/>
</menu>
