<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.mardous.booming.ui.component.preferences.dialog.NowPlayingScreenPreference
        app:icon="@drawable/ic_play_circle_24dp"
        app:title="@string/now_playing_screen_title"
        app:layout="@layout/list_item_view_no_title"
        app:key="now_playing_screen" />

    <SwitchPreferenceCompat
        app:title="@string/swipe_to_dismiss_title"
        app:summary="@string/swipe_to_dismiss_summary"
        app:defaultValue="true"
        app:layout="@layout/list_item_view_switch"
        app:key="swipe_to_dismiss" />

    <SwitchPreferenceCompat
        app:icon="@drawable/ic_keyboard_arrow_up_24dp"
        app:title="@string/open_on_play_title"
        app:summary="@string/open_on_play_summary"
        app:defaultValue="false"
        app:layout="@layout/list_item_view_switch"
        app:key="open_on_play" />

    <PreferenceCategory
        app:title="@string/album_cover_header"
        app:layout="@layout/preference_category_title">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/lyrics_on_album_cover_title"
            app:summary="@string/lyrics_on_album_cover_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view_switch"
            app:key="lyrics_on_cover" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/swipe_album_cover_title"
            app:summary="@string/swipe_album_cover_summary"
            app:defaultValue="true"
            app:layout="@layout/list_item_view_switch"
            app:key="left_right_swiping" />

        <SeekBarPreference
            app:icon="@drawable/ic_rounded_corner_24dp"
            app:title="@string/now_playing_corner_radius_title"
            app:summary="@string/now_playing_corner_radius_summary"
            android:max="48"
            app:min="0"
            app:defaultValue="@integer/now_playing_corner_radius"
            app:showSeekBarValue="true"
            app:layout="@layout/list_item_view_seekbar"
            app:key="now_playing_corner_radius"/>

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_view_carousel_24dp"
            app:title="@string/carousel_effect_title"
            app:defaultValue="true"
            app:layout="@layout/list_item_view_switch_no_title"
            app:key="carousel_effect" />

        <ListPreference
            app:iconSpaceReserved="true"
            app:title="@string/album_cover_effect_title"
            app:entries="@array/pref_cover_swiping_effect_entries"
            app:entryValues="@array/pref_cover_swiping_effect_values"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="simple"
            app:dependency="left_right_swiping"
            app:layout="@layout/list_item_view"
            app:key="cover_swiping_effect" />

        <com.mardous.booming.ui.component.preferences.dialog.ActionOnCoverPreference
            app:iconSpaceReserved="true"
            app:title="@string/single_tap_on_album_cover_title"
            app:layout="@layout/list_item_view"
            app:key="cover_single_tap_action" />

        <com.mardous.booming.ui.component.preferences.dialog.ActionOnCoverPreference
            app:iconSpaceReserved="true"
            app:title="@string/double_tap_on_album_cover_title"
            app:layout="@layout/list_item_view"
            app:key="cover_double_tap_action" />

        <com.mardous.booming.ui.component.preferences.dialog.ActionOnCoverPreference
            app:iconSpaceReserved="true"
            app:title="@string/long_press_on_album_cover_title"
            app:layout="@layout/list_item_view"
            app:key="cover_long_press_action" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/controls_header"
        app:layout="@layout/preference_category_title">

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_next_24dp"
            app:title="@string/extra_controls_title"
            app:summary="@string/extra_controls_summary"
            app:defaultValue="@bool/is_tablet"
            app:layout="@layout/list_item_view_switch"
            app:key="add_extra_controls" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/adaptive_controls_title"
            app:summary="@string/adaptive_controls_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view_switch"
            app:key="adaptive_controls" />

        <SwitchPreferenceCompat
            app:title="@string/circle_button_title"
            app:defaultValue="false"
            app:layout="@layout/list_item_view_switch_no_title"
            app:key="circle_play_button" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/animate_controls_title"
            app:summary="@string/animate_controls_summary"
            app:defaultValue="true"
            app:layout="@layout/list_item_view_switch"
            app:key="animate_player_control" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/swipe_controls_title"
            app:summary="@string/swipe_controls_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view_switch"
            app:key="swipe_controls" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/squiggly_seek_bar_title"
            app:summary="@string/squiggly_seek_bar_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view_switch"
            app:key="squiggly_seek_bar" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/display_header"
        app:layout="@layout/preference_category_title">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/display_album_name_title"
            app:defaultValue="true"
            app:layout="@layout/list_item_view_switch_no_title"
            app:key="display_album_title" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/display_extra_info_title"
            app:summary="@string/display_extra_info_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view_switch"
            app:key="display_extra_info" />

        <com.mardous.booming.ui.component.preferences.dialog.NowPlayingExtraInfoPreference
            app:iconSpaceReserved="true"
            app:title="@string/select_extra_info_title"
            app:summary="@string/select_extra_info_summary"
            app:persistent="false"
            app:dependency="display_extra_info"
            app:layout="@layout/list_item_view"
            app:key="now_playing_extra_info" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/display_next_song_title"
            app:summary="@string/display_next_song_summary"
            app:defaultValue="true"
            app:layout="@layout/list_item_view_switch"
            app:key="display_next_song" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/prefer_remaining_time_title"
            app:summary="@string/prefer_remaining_time_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view_switch"
            app:key="prefer_remaining_time" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/prefer_album_artist_name_title"
            app:summary="@string/prefer_album_artist_name_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view_switch"
            app:key="prefer_album_artist_name_on_np" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
