<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_shuffle_all"
        android:title="@string/shuffle_all_label"/>
	<item
        android:id="@+id/action_play_next"
        android:title="@string/action_queue_next"/>
	<item
		android:id="@+id/menu_add_to"
		android:title="@string/add_to_label">
		<menu>
			<item
				android:id="@+id/action_add_to_playing_queue"
				android:title="@string/playing_queue_label"/>
			<item
				android:id="@+id/action_add_to_playlist"
				android:title="@string/playlist_label"/>
		</menu>
	</item>
	<item
		android:id="@+id/action_go_to_artist"
		android:title="@string/action_go_to_artist"/>
	<item
		android:id="@+id/action_tag_editor"
		android:title="@string/action_tag_editor"/>
	<item
        android:id="@+id/action_delete_from_device"
        android:title="@string/action_delete_from_device"/>
</menu>
