<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_grid_size"
        android:title="@string/action_grid_size"
        app:showAsAction="never">
        <menu>
            <group
                android:id="@+id/group_grid_size"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/action_grid_size_1"
                    android:title="@string/grid_size_1"/>
                <item
                    android:id="@+id/action_grid_size_2"
                    android:title="@string/grid_size_2"/>
                <item
                    android:id="@+id/action_grid_size_3"
                    android:title="@string/grid_size_3"/>
                <item
                    android:id="@+id/action_grid_size_4"
                    android:title="@string/grid_size_4"/>
                <item
                    android:id="@+id/action_grid_size_5"
                    android:title="@string/grid_size_5"/>
                <item
                    android:id="@+id/action_grid_size_6"
                    android:title="@string/grid_size_6"/>
                <item
                    android:id="@+id/action_grid_size_7"
                    android:title="@string/grid_size_7"/>
                <item
                    android:id="@+id/action_grid_size_8"
                    android:title="@string/grid_size_8"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_view_type"
        android:title="@string/action_view_type"
        app:showAsAction="never">
        <menu>
            <group
                android:id="@+id/group_view_type"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/action_view_type_normal"
                    android:title="@string/view_type_normal"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/action_view_type_card"
                    android:title="@string/view_type_card"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/action_view_type_colored_card"
                    android:title="@string/view_type_colored_card"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/action_view_type_circle"
                    android:title="@string/view_type_circle"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/action_view_type_image"
                    android:title="@string/view_type_image"
                    app:showAsAction="never"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_sort_order"
        android:title="@string/action_sort_order"
        app:showAsAction="never">
        <menu>
        </menu>
    </item>
    <item
        android:orderInCategory="10"
        android:id="@+id/action_scan"
        android:title="@string/scan_media"
        app:showAsAction="never" />
    <item
        android:orderInCategory="10"
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/settings_title"
        app:showAsAction="never" />
</menu>
