<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/search_label"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_play_next"
        android:title="@string/action_queue_next"/>
    <item
        android:id="@+id/menu_add_to"
        android:title="@string/add_to_label">
        <menu>
            <item
                android:id="@+id/action_add_to_playing_queue"
                android:title="@string/playing_queue_label"/>
            <item
                android:id="@+id/action_add_to_playlist"
                android:title="@string/playlist_label"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_tag_editor"
        android:title="@string/action_tag_editor"/>
    <item
        android:id="@+id/action_play_info"
        android:title="@string/play_info"/>
    <item
        android:id="@+id/action_horizontal_albums"
        android:title="@string/horizontal_albums"
        android:checkable="true"/>
    <item
        android:id="@+id/action_toggle_compact_song_view"
        android:title="@string/compact_song_view"
        android:checkable="true"/>
    <item
        android:id="@+id/action_ignore_singles"
        android:title="@string/ignore_singles"
        android:checkable="true"/>
</menu>
