<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/search_label"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_play_next"
        android:title="@string/action_queue_next"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_add_to"
        android:title="@string/add_to_label"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_add_to_playing_queue"
                android:title="@string/playing_queue_label"/>
            <item
                android:id="@+id/action_add_to_playlist"
                android:title="@string/playlist_label"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_sort_order"
        android:title="@string/action_sort_order"
        app:showAsAction="never">
        <menu>
            <group
                android:id="@+id/group_sort_order"
                android:checkableBehavior="single">
                <item
                    android:id="@id/action_sort_order_az"
                    android:title="@string/sort_order_az"/>
                <item
                    android:id="@id/action_sort_order_artist"
                    android:title="@string/sort_order_artist"/>
                <item
                    android:id="@id/action_sort_order_album"
                    android:title="@string/sort_order_album"/>
                <item
                    android:id="@id/action_sort_order_duration"
                    android:title="@string/sort_order_duration"/>
                <item
                    android:id="@id/action_sort_order_date_added"
                    android:title="@string/sort_order_date_added"/>
                <item
                    android:id="@id/action_sort_order_date_modified"
                    android:title="@string/sort_order_date_modified"/>
            </group>
            <item
                android:id="@+id/action_sort_order_descending"
                android:title="@string/sort_order_descending"
                android:checkable="true"/>
            <item
                android:id="@+id/action_sort_order_ignore_articles"
                android:title="@string/sort_order_ignore_articles"
                android:checkable="true"/>
        </menu>
    </item>
</menu>